--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,3 +13,21 @@ html, body {
     width: 100%;
     font-family: "Montserrat", sans-serif;
 }
+
+/*--------------------------------------------Nav-bar*/
+
+.navbar-brand {
+    padding: 0;
+}
+
+.navbar-brand img {
+    height: 60px;
+}
+
+.navbar-dark .navbar-nav .nav-link.active, .navbar-dark .navbar-nav .show>.nav-link {
+    color: #d36cbd;
+}
+
+.navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
+    color: #fff;
+}
