--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,3 +42,22 @@ html, body {
     width: 100%;
     background-size: cover;
 }
+
+.landing-text {
+    display: table-cell;
+    text-align: center;
+    /* vertical-align: middle; */
+    padding-top: 70px;
+}
+
+.landing-text h1 {
+    color: #fff;
+    font-weight: bold;
+}
+
+.landing-text h3 {
+    color: #fff;
+    font-weight: 300;
+    font-style: italic;
+}
+
