Add add section background-color to style.css

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -61,3 +61,8 @@ html, body {
     font-style: italic;
 }
 
+/*--------------------------------------------Section*/
+
+section {
+    background-color: #212529;
+}
