Add style to social icons in footer

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -97,3 +97,14 @@ footer {
     background-color: #d36cbd;
     padding: 5% 5% 5% 5%;
 }
+
+.bi-facebook, .bi-instagram, .bi-twitter {
+    color: #000000;
+    font-size: 25px;
+    padding: 0 10px;
+}
+
+.bi-facebook:hover, .bi-instagram:hover, .bi-twitter:hover {
+    color: #fff;
+    text-decoration: none;
+}
