--- a/static/css/style.css
+++ b/static/css/style.css
@@ -116,3 +116,24 @@ footer {
         height: 130px;
         width: 140px;
     }
+
+    .landing-text {
+        padding-top: 85px;
+    }
+
+    .landing-text h1, h3 {
+        padding: 0 4px;
+    }
+
+    .landing-text h3 {
+        margin-top: 40px;
+    }
+
+    .padding {
+        padding: 80px 0 30px;
+    }
+
+    .padding h2 {
+        margin-top: 25px;
+    }
+}
